<resources>
    <string name="app_name">Meatelicious</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="meatelicious">Meatelicious</string>
    <string name="enjoymeat_delicious_ie">enjoymeat@delicious.ie</string>
    <string name="menu_timer">Timer</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>

    <string name="backdrop_title">LOVE FOOD?</string>
    <string name="backdrop_subtitle">Here are our top recipes to try out!</string>
    <string name="todo" />
    <string name="prep">Prep Time</string>
    <string name="cook">Cook Time</string>
    <string name="ingred">Ingredients</string>
    <string name="listIngred">List of Ingredients</string>
    <string name="steps">Steps</string>
    <string name="stepsList">Steps List</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipeserves">recipeServes</string>
    <string name="difficulty">Difficulty :</string>

</resources>