<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food.Food1Activity">

    <ImageView
        android:id="@+id/imgU"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/food_1"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imgU">
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons1"
                    android:layout_width="wrap_content"
                    android:layout_height="270dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SUSHI GORENG"
                        android:textAlignment="center"
                        android:textSize="40sp"
                        app:layout_constraintBottom_toBottomOf="@id/cons1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/cons1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:cardCornerRadius="8dp"
                        android:elevation="15dp"
                        >
                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:background="@drawable/food_1"
                            android:layout_margin="8dp">
                        </ImageView>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="SUSHI GORENG"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toTopOf="@+id/lay1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/card1"></TextView>

                    <LinearLayout
                        android:id="@+id/lay1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv1">
                    <View
                        android:id="@+id/v1"
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:layout_marginTop="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv1">
                    </View>

                        <LinearLayout
                            android:id="@+id/lay11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            app:layout_constraintTop_toBottomOf="@id/v1">

                            <LinearLayout
                                android:id="@+id/lay2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:gravity="center"
                                android:orientation="vertical"
                                app:layout_constraintStart_toStartOf="parent">

                                <TextView
                                    android:id="@+id/tv11"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/prep"
                                    android:textAlignment="center"
                                    android:textSize="20sp"
                                    app:layout_constraintStart_toStartOf="parent" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="5 mins"
                                    android:textAlignment="center"
                                    android:textSize="17sp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/tv11" />
                            </LinearLayout>

                            <View
                                android:layout_width="2dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                app:layout_constraintTop_toBottomOf="@id/v1"></View>

                            <LinearLayout
                                android:id="@+id/lay3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:gravity="center"
                                android:orientation="vertical"
                                app:layout_constraintStart_toStartOf="parent">

                                <TextView
                                    android:id="@+id/tv12"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/cook"
                                    android:textAlignment="center"
                                    android:textSize="20sp"
                                    app:layout_constraintStart_toStartOf="parent" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="30 mins"
                                    android:textAlignment="center"
                                    android:textSize="17sp"
                                    app:layout_constraintStart_toStartOf="parent" />
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:id="@+id/v2"
                            android:layout_width="wrap_content"
                            android:layout_height="2dp"
                            android:layout_marginTop="5dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"></View>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cons2">

                    <TextView
                        android:id="@+id/judul1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/ingred"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/judul2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/judul1" />

                    <TextView
                        android:id="@+id/judul2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/listIngred"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_3" />

                    <TextView
                        android:id="@+id/tv_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/steps"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/judul3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/judul2" />

                    <TextView
                        android:id="@+id/judul3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/stepsList"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_4" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>